# datascience-piscine

./: .gitignore
DataEngineer/: README.md  load_subject.sh  makefile
DataEngineer/ex00/: .env.sample  docker-compose.yml
DataEngineer/ex01/: README.md
DataEngineer/ex02/: table.py
DataEngineer/ex03/: automatic_table.py
DataEngineer/ex04/: items_table.py
DataWarehouse/: pyproject.toml
DataWarehouse/ex00/: README.md  docker-compose.yml  items_table.py  makefile
DataWarehouse/ex01/: README.md  customer_table.py
DataWarehouse/ex02/: remove_duplicates.py
DataWarehouse/ex03/: fusion.py
